Add pseudo code to 42 and update plantUML

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /target/
 /src/main/java/ex41/exercise41_output.txt
 /src/main/java/ex42/exercise42_output.txt
+/src/main/java/ex45/exercise45_output.txt
